Fixed resume and portfolio button size on mobile homepage

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -147,7 +147,7 @@ body {
 }
 
 .homebutton {
-		font-size:20px;
+		font-size:18px;
 	}
 
 @media screen and (min-width: 768px) {
@@ -287,7 +287,6 @@ a>.fa-4 {
 .homebutton {
 	color: rgb(110,110,110);
 	font-weight: 500;
-	font-size:25px;
 	background-color: transparent;
 	border: 1px solid rgb(110,110,110);
 	border-radius: 30px;
